--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,66 @@
   -webkit-app-region: no-drag;
   cursor: default;
 }
+
+
+*{
+  font-family: Inter;
+  box-sizing: border-box;
+}
+
+nav{
+  -webkit-app-region: drag;
+  height: 35px;
+  display: none;
+  align-items: center;
+  border-bottom: 1px solid black;
+
+}
+
+.nav-buttons{
+
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100px;
+}
+
+#closeBtn{
+  background: #FF605C
+}
+
+.nav-buttons > button{
+
+  height: 15px;
+  width: 15px;
+  border: none;
+  border-radius: 50%;
+  -webkit-app-region: no-drag;
+  aspect-ratio: 1;
+}
+
+#minimizeBtn{
+  background: #FFBD44
+}
+
+#maximize{
+  background: #00CA4E
+}
+
+#title-bar {
+  display: flex;
+  justify-content: space-between;
+  /* Add your own styles */
+}
+
+#title {
+  position: absolute; 
+  left: 50%; 
+  transform: translateX(-50%); 
+  margin: auto 0;
+}
+
+
 /* 
 
 a {
