--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,9 @@
 
 nav{
   -webkit-app-region: drag;
+  position: absolute;
+  background-color: #242424;
+  width: 100%;
   height: 35px;
   display: none;
   align-items: center;
