--- a/src/index.css
+++ b/src/index.css
@@ -19,8 +19,12 @@
   cursor: default;
 }
 
+/* import url font */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap');
+
 
 *{
+  
   font-family: Inter;
   box-sizing: border-box;
 }
