Add more route for rh pages

--- a/src/assets/css/login.css
+++ b/src/assets/css/login.css
@@ -2,8 +2,8 @@
 body,*{
     padding: 0;
     margin: 0;
-    background: #242424;
-    color: white;
+    /*background: #242424;*/
+    /*color: white;*/
 }
 
 h1{
