--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@
 
 nav{
   -webkit-app-region: drag;
-  position: absolute;
+  position: fixed;
   background-color: #242424;
   width: 100%;
   height: 35px;
@@ -87,6 +87,7 @@ a{
   left: 50%;
   transform: translateX(-50%);
   margin: auto 0;
+  color: white;
 }
 
 
