--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,15 @@
 /* import url font */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap');
 
+body {
+  box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -23,9 +32,7 @@
 }
 
 *{
-
   font-family: Inter;
-  box-sizing: border-box;
 }
 
 nav{
