--- a/src/assets/css/login.css
+++ b/src/assets/css/login.css
@@ -1,66 +1,88 @@
-
-body,*{
-    padding: 0;
-    margin: 0;
+body,
+* {
+  padding: 0;
+  margin: 0;
 }
 
-.login {
-    background-color: #242424;
-    color: white;
+.welcome {
+  transition: all ease 5s;
+  position: absolute;
+  display: none;
+  color: white;
+  height: 100%;
+  width: 100%;
+  z-index: 2;
+  background-color: #242424;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
 }
 
-h1{
-    font-size: 3.5rem;
-    font-weight: 700;
+.welcome h1{
+    transform:translateY(350px);
 }
 
-.split-screen{
-    display: flex;
-    flex-direction: row;
-    height: 100vh;
+
+.about {
+  padding: 5%;
 }
 
-.left, .right{
-    display: flex;
-    width: 50%;
-    height: auto;
-    padding: 2%;
-
+.login,
+.about {
+  background-color: #242424;
+  color: white;
 }
 
-.left{
-    background-color: #2563EB;
-    align-items: center;
+h1 {
+  font-size: 3.5rem;
+  font-weight: 700;
 }
 
-form{
-    padding-top: 5%;
+.split-screen {
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
 }
 
-.right{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
+.left,
+.right {
+  display: flex;
+  width: 50%;
+  height: auto;
+  padding: 2%;
 }
 
-.left p{
-    font-size: 1.5rem;
-    font-weight: 200;
+.left {
+  background-color: #2563eb;
+  align-items: center;
 }
 
-.version
-{
-    /* put version at the bottom */
-    text-align: center;
-    position: absolute;
-    bottom: 0;
-    padding-bottom: 3%;
-
+form {
+  padding-top: 5%;
 }
 
-h5{
-    font-size: 1rem;
-    font-weight: 200;
+.right {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+
+.left p {
+  font-size: 1.5rem;
+  font-weight: 200;
+}
+
+.version {
+  /* put version at the bottom */
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  padding-bottom: 3%;
+}
+
+h5 {
+  font-size: 1rem;
+  font-weight: 200;
 }
