--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 /* import url font */
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap");
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -22,13 +22,18 @@
   cursor: default;
 }
 
-*{
+a {
+  -webkit-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-app-region: no-drag;
+}
 
+* {
   font-family: Inter;
   box-sizing: border-box;
 }
 
-nav{
+nav {
   -webkit-app-region: drag;
   position: fixed;
   background-color: #242424;
@@ -37,29 +42,25 @@ nav{
   display: none;
   align-items: center;
   border-bottom: 1px solid black;
-
 }
 
-.nav-buttons{
-
+.nav-buttons {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   width: 100px;
 }
 
-#closeBtn{
-  background: #FF605C
+#closeBtn {
+  background: #ff605c;
 }
 
-a{
-  color: grey ;
+a {
+  color: grey;
   text-decoration: none;
 }
 
-
-.nav-buttons > button{
-
+.nav-buttons > button {
   height: 15px;
   width: 15px;
   border: none;
@@ -68,12 +69,12 @@ a{
   aspect-ratio: 1;
 }
 
-#minimizeBtn{
-  background: #FFBD44
+#minimizeBtn {
+  background: #ffbd44;
 }
 
-#maximize{
-  background: #00CA4E
+#maximize {
+  background: #00ca4e;
 }
 
 #title-bar {
@@ -89,7 +90,6 @@ a{
   margin: auto 0;
   color: white;
 }
-
 
 /* 
 
